// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 10px;
  width: small;
  height: small;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: primary;
}

.c2 {
  position: relative;
  display: inline-block;
  height: 37px;
  width: 16px;
}

.c2::before {
  position: absolute;
  content: '';
  display: block;
  top: 0;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  -webkit-transform-origin: 50%;
  -ms-transform-origin: 50%;
  transform-origin: 50%;
  -webkit-animation: fIIevM 500ms alternate infinite ease;
  animation: fIIevM 500ms alternate infinite ease;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
    kind="primary"
    size="small"
  />
  <p
    className="c3"
  >
    Loading
  </p>
</div>
`;

exports[`Loader renders correctly 2`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  heigth: 50px;
  width: 100%;
  background: #fff;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 10px;
}

.c2::before {
  height: 20px;
  width: 20px;
  border-radius: 50%;
  border: 2px solid transparent;
  content: '';
  display: block;
  top: 0;
  -webkit-transform-origin: 50%;
  -ms-transform-origin: 50%;
  transform-origin: 50%;
  background: linear-gradient(white,white),conic-gradient(#878C9B,#FFFFFF);
  background-origin: border-box;
  background-clip: content-box,border-box;
  -webkit-animation: bCrGrT 1s infinite ease;
  animation: bCrGrT 1s infinite ease;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  />
</div>
`;

exports[`Loader renders correctly two 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 10px;
  width: medium;
  height: medium;
}

.c2 {
  position: relative;
  display: inline-block;
  height: 37px;
  width: 24px;
}

.c2::before {
  position: absolute;
  content: '';
  display: block;
  top: 0;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  -webkit-transform-origin: 50%;
  -ms-transform-origin: 50%;
  transform-origin: 50%;
  -webkit-animation: fIIevM 500ms alternate infinite ease;
  animation: fIIevM 500ms alternate infinite ease;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
    kind="primary"
    size="medium"
  />
  
</div>
`;
